objects/Origination_Document__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Origination Documents</relationshipLabel>
        <relationshipName>Origination_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Submitted__c</fullName>
        <label>Document Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documents_in_File__c</fullName>
        <label>Documents in File</label>
        <picklist>
            <picklistValues>
                <fullName>Install Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed ICF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Permits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Attachment__c</fullName>
        <label>Link to Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Not_Required_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Required for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_to_Approver__c</fullName>
        <label>Notes to Approver</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_to_Dealer__c</fullName>
        <label>Notes to Dealer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Comments__c</fullName>
        <description>Field used by the Origination Document object to allow the partners to write in comments on the documents that they upload.</description>
        <label>Partner Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Origination Document</label>
    <listViews>
        <fullName>TPO_FR_Pending_Origination_Doc</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Type__c</columns>
        <columns>Link_to_Attachment__c</columns>
        <columns>Notes_to_Dealer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Document_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Origination</value>
        </filters>
        <filters>
            <field>Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Approval</value>
        </filters>
        <label>TPO FR Pending Origination Doc</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Origination Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Origination Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>